figue/tests/integration/snapshots/main__integration__err__error_unknown_argument.snap
---
source: crates/figue/tests/integration/err.rs
expression: "strip_ansi_escapes :: strip_str(& err.to_string())"
---
Error: could not parse command-line arguments

Sources:
├─ cli --settings.*
└─ defaults

concurrency.. .. ⨯ MISSING

Run with --help for usage information.
Error: unknown flag: --c0ncurrency. Did you mean '--concurrency'?
   ╭─[ <cli>:1:1 ]
   │
 1 │ --c0ncurrency
   │ ──────┬──────  
   │       ╰──────── unknown flag: --c0ncurrency. Did you mean '--concurrency'?
───╯
